# Progect_analitycs

./: .gitkeep
analytics_refactor/: .env.template  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
analytics_refactor/application/: container.py
analytics_refactor/application/interfaces/: market_data.py
analytics_refactor/application/services/: sell_stress_service.py  vm_calculation_service.py
analytics_refactor/deploy/nginx/: analytics-refactor.conf
analytics_refactor/deploy/systemd/: analytics-refactor.service
analytics_refactor/domain/: errors.py
analytics_refactor/domain/calculations/: sell_stress.py  vm.py
analytics_refactor/infrastructure/: config.py  errors.py  logging_setup.py
analytics_refactor/infrastructure/clients/: moex_client.py
analytics_refactor/presentation/: cli.py  web.py
analytics_refactor/presentation/static/: styles.css
analytics_refactor/presentation/templates/: index.html
analytics_refactor/schemas/: dtos.py
analytics_refactor/scripts/: bootstrap.sh
analytics_refactor/tests/unit/domain/: test_sell_stress_calculator.py  test_vm_calculator.py
